--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/leaflet.heat": "^0.2.5",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "next": "14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
