--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/react-datepicker": "^6.2.0",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
