--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -3,7 +3,11 @@
   "builds": [
     {
       "src": "main.py",
-      "use": "@vercel/python@3.1.0"
+      "use": "@vercel/python@3.1.0",
+      "config": {
+        "runtime": "python3.11",
+        "pip": ["--no-cache-dir"]
+      }
     }
   ],
   "routes": [
