--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -3,9 +3,10 @@
   "builds": [
     {
       "src": "main.py",
-      "use": "@vercel/python",
+      "use": "@vercel/python@3.1.0",
       "config": {
-        "buildCommand": "./build_script.sh",
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.11",
         "pythonVersion": "3.11"
       }
     }
@@ -15,5 +16,9 @@
       "src": "/(.*)",
       "dest": "main.py"
     }
-  ]
+  ],
+  "env": {
+    "PYTHONPATH": "/vercel/path0/apps/api",
+    "PYTHONVERSION": "3.11"
+  }
 }
